animated TPS character
walk & sprint strafe
8-directional
no jumping animation

Sprint is NOT replicated

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,10 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+#Additional files for documentation, archives and such
+*.docx
+*.doc
+*.rar
+*.pptx
+*.ppt
