Custom Player Movement Component
Sprinting and dodging replicated across the network
Dodge is NOT animated

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -61,3 +61,6 @@ GameServerQueryPort=27015
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/NetGame.PlayerMovementComponent.bDodgeKeyPressed",NewName="/Script/NetGame.PlayerMovementComponent.bWantsToDodge")
