--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -64,3 +64,8 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/NetGame.PlayerMovementComponent.bDodgeKeyPressed",NewName="/Script/NetGame.PlayerMovementComponent.bWantsToDodge")
++PropertyRedirects=(OldName="/Script/NetGame.NETSaveGame.LevelName",NewName="/Script/NetGame.NETSaveGame.SavedLevelName")
++PropertyRedirects=(OldName="/Script/NetGame.NETSaveGame.CurrentLevel",NewName="/Script/NetGame.NETSaveGame.SavedLevelName")
++PropertyRedirects=(OldName="/Script/NetGame.NETSaveGame.CurrentLevelURL",NewName="/Script/NetGame.NETSaveGame.SavedLevelName")
++PropertyRedirects=(OldName="/Script/NetGame.NETSaveGame.SavedLevelURL",NewName="/Script/NetGame.NETSaveGame.SavedLevelName")
++ClassRedirects=(OldName="/Script/NetGame.SaveGameMetaData",NewName="/Script/NetGame.SaveGameMetadata")
