Main Menu UI refactor
Main menu WidgetSwitcher panels replcaced with coresponding UI_widgets to seperate logic and variables and decouple from UI_MainMenu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode=/Game/Networking/BP_NWGameMode.BP_NWGameMode_C
+GlobalDefaultGameMode=/Game/Networking/BP_NetGameGameMode.BP_NetGameGameMode_C
 GameInstanceClass=/Script/NetGame.NWGameInstance
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -69,3 +69,4 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +PropertyRedirects=(OldName="/Script/NetGame.NETSaveGame.CurrentLevelURL",NewName="/Script/NetGame.NETSaveGame.SavedLevelName")
 +PropertyRedirects=(OldName="/Script/NetGame.NETSaveGame.SavedLevelURL",NewName="/Script/NetGame.NETSaveGame.SavedLevelName")
 +ClassRedirects=(OldName="/Script/NetGame.SaveGameMetaData",NewName="/Script/NetGame.SaveGameMetadata")
+
