Complete save & load + interface

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 #JetBrains
 .idea/
 
+
 # Compiled Object files
 *.slo
 *.lo
@@ -70,7 +71,7 @@ Saved/*
 
 # Compiled source files for the engine to use
 Intermediate/*
-Plugins/*/Intermediate/*
+Plugins/*/RiderLink/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
