--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Networking/BP_NetGameGameMode.BP_NetGameGameMode_C
 GameInstanceClass=/Script/NetGame.NWGameInstance
 
@@ -69,4 +69,5 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +PropertyRedirects=(OldName="/Script/NetGame.NETSaveGame.CurrentLevelURL",NewName="/Script/NetGame.NETSaveGame.SavedLevelName")
 +PropertyRedirects=(OldName="/Script/NetGame.NETSaveGame.SavedLevelURL",NewName="/Script/NetGame.NETSaveGame.SavedLevelName")
 +ClassRedirects=(OldName="/Script/NetGame.SaveGameMetaData",NewName="/Script/NetGame.SaveGameMetadata")
++PropertyRedirects=(OldName="/Script/NetGame.SaveGameMetadata.SavedGamesMetaData",NewName="/Script/NetGame.SaveGameMetadata.SavedGamesMetadata")
 
