--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,6 +17,7 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 
 r.ReflectionMethod=1
+r.AllowStaticLighting=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
