GAS boilerplate and testing

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@ GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Networking/BP_NetGameGameMode.BP_NetGameGameMode_C
 GameInstanceClass=/Script/NetGame.NWGameInstance
+bUseSplitscreen=False
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_14
@@ -71,4 +72,5 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +PropertyRedirects=(OldName="/Script/NetGame.NETSaveGame.SavedLevelURL",NewName="/Script/NetGame.NETSaveGame.SavedLevelName")
 +ClassRedirects=(OldName="/Script/NetGame.SaveGameMetaData",NewName="/Script/NetGame.SaveGameMetadata")
 +PropertyRedirects=(OldName="/Script/NetGame.SaveGameMetadata.SavedGamesMetaData",NewName="/Script/NetGame.SaveGameMetadata.SavedGamesMetadata")
++ClassRedirects=(OldName="/Script/NetGame.GASGameplayAbility",NewName="/Script/NetGame.BaseGameplayAbility")
 
