--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,4 +73,6 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +ClassRedirects=(OldName="/Script/NetGame.SaveGameMetaData",NewName="/Script/NetGame.SaveGameMetadata")
 +PropertyRedirects=(OldName="/Script/NetGame.SaveGameMetadata.SavedGamesMetaData",NewName="/Script/NetGame.SaveGameMetadata.SavedGamesMetadata")
 +ClassRedirects=(OldName="/Script/NetGame.GASGameplayAbility",NewName="/Script/NetGame.BaseGameplayAbility")
++PropertyRedirects=(OldName="/Script/NetGame.PlayerCharacter.DefaultAttributeEffect",NewName="/Script/NetGame.PlayerCharacter.DefaultAttributes")
++ClassRedirects=(OldName="/Script/NetGame.GASAttributeSet",NewName="/Script/NetGame.PlayerAttributeSet")
 
