--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,6 +6,8 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.Skill.Dash",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.TookDamage",DevComment="")
++GameplayTagList=(Tag="State.Dead",DevComment="")
 +GameplayTagList=(Tag="Weapon.Hit",DevComment="")
 
