Sprint and Regen effects
Sprint is now triggered via GameplayAbility.
Health and Stamina regen effects -> TODO: cap the value regen effects can restore attributes to; current behaviour exceeds max<attribute> value

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,7 +7,14 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Skill.Dash",DevComment="")
++GameplayTagList=(Tag="Ability.Sprint",DevComment="")
++GameplayTagList=(Tag="Character.Sprint",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Character.Sprint",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.TookDamage",DevComment="")
 +GameplayTagList=(Tag="State.Dead",DevComment="")
++GameplayTagList=(Tag="State.Regen.Health",DevComment="")
++GameplayTagList=(Tag="State.Regen.NoRegen",DevComment="")
++GameplayTagList=(Tag="State.Regen.Stamina",DevComment="")
++GameplayTagList=(Tag="State.Sprinting",DevComment="")
 +GameplayTagList=(Tag="Weapon.Hit",DevComment="")
 
