Aim Sights ability

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-EditorStartupMap=/Game/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/Levels/Testing.Testing
 GlobalDefaultGameMode=/Game/Networking/BP_NetGameGameMode.BP_NetGameGameMode_C
 GameInstanceClass=/Script/NetGame.NWGameInstance
 bUseSplitscreen=False
@@ -75,4 +75,5 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +ClassRedirects=(OldName="/Script/NetGame.GASGameplayAbility",NewName="/Script/NetGame.BaseGameplayAbility")
 +PropertyRedirects=(OldName="/Script/NetGame.PlayerCharacter.DefaultAttributeEffect",NewName="/Script/NetGame.PlayerCharacter.DefaultAttributes")
 +ClassRedirects=(OldName="/Script/NetGame.GASAttributeSet",NewName="/Script/NetGame.PlayerAttributeSet")
++PropertyRedirects=(OldName="/Script/NetGame.PlayerMovementComponent.AimSightsSpeed",NewName="/Script/NetGame.PlayerMovementComponent.AimSpeed")
 
