--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -7,10 +7,12 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Skill.Dash",DevComment="")
-+GameplayTagList=(Tag="Ability.Sprint",DevComment="")
++GameplayTagList=(Tag="Character.Aim",DevComment="")
 +GameplayTagList=(Tag="Character.Sprint",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Character.Sprint",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.TookDamage",DevComment="")
++GameplayTagList=(Tag="State.Aiming",DevComment="")
++GameplayTagList=(Tag="State.Dashing",DevComment="")
 +GameplayTagList=(Tag="State.Dead",DevComment="")
 +GameplayTagList=(Tag="State.Regen.Health",DevComment="")
 +GameplayTagList=(Tag="State.Regen.NoRegen",DevComment="")
