--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,4 +76,5 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +PropertyRedirects=(OldName="/Script/NetGame.PlayerCharacter.DefaultAttributeEffect",NewName="/Script/NetGame.PlayerCharacter.DefaultAttributes")
 +ClassRedirects=(OldName="/Script/NetGame.GASAttributeSet",NewName="/Script/NetGame.PlayerAttributeSet")
 +PropertyRedirects=(OldName="/Script/NetGame.PlayerMovementComponent.AimSightsSpeed",NewName="/Script/NetGame.PlayerMovementComponent.AimSpeed")
++PropertyRedirects=(OldName="/Script/NetGame.ServerInfo.isLan",NewName="/Script/NetGame.ServerInfo.bIsLan")
 
