--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,4 +77,5 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +ClassRedirects=(OldName="/Script/NetGame.GASAttributeSet",NewName="/Script/NetGame.PlayerAttributeSet")
 +PropertyRedirects=(OldName="/Script/NetGame.PlayerMovementComponent.AimSightsSpeed",NewName="/Script/NetGame.PlayerMovementComponent.AimSpeed")
 +PropertyRedirects=(OldName="/Script/NetGame.ServerInfo.isLan",NewName="/Script/NetGame.ServerInfo.bIsLan")
++PropertyRedirects=(OldName="/Script/NetGame.PlayerAttributeSet.DataTable",NewName="/Script/NetGame.PlayerAttributeSet.AttributesDataTable")
 
