--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Levels/Testing.Testing
 GlobalDefaultGameMode=/Game/Networking/BP_NetGameGameMode.BP_NetGameGameMode_C
-GameInstanceClass=/Script/NetGame.NWGameInstance
+GameInstanceClass=/Script/NetGame.EOSGameInstance
 bUseSplitscreen=False
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -63,6 +63,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/NetGame.PlayerMovementComponent.AimSightsSpeed",NewName="/Script/NetGame.PlayerMovementComponent.AimSpeed")
 +PropertyRedirects=(OldName="/Script/NetGame.ServerInfo.isLan",NewName="/Script/NetGame.ServerInfo.bIsLan")
 +PropertyRedirects=(OldName="/Script/NetGame.PlayerAttributeSet.DataTable",NewName="/Script/NetGame.PlayerAttributeSet.AttributesDataTable")
++PropertyRedirects=(OldName="/Script/NetGame.EOSGameInstance.ShowErrorMessage",NewName="/Script/NetGame.EOSGameInstance.ShowErrorMessageEOS")
 
 [/Script/OnlineSubsystemEOS.EOSSettings]
 CacheDir=CacheDir
@@ -83,28 +84,12 @@ bMirrorPresenceToEAS=False
 [OnlineSubsystemEOS]
 bEnabled=true
 
-[OnlineSubsystemEOSPlus]
-bEnabled=true
-
-[OnlineSubsystemSteam]
-bEnabled=true
-SteamDevAppId=480
-GameServerQueryPort=27015
-
 [OnlineSubsystem]
-DefaultPlatformService=EOSPlus
-NativePlatformService=Steam
+DefaultPlatformService=EOS
 
 [/Script/Engine.GameEngine]
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEOS.NetDriverEOS",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
 [/Script/OnlineSubsystemEOS.NetDriverEOS]
 bIsUsingP2PSockets=true
-
-[/Script/OnlineSubsystemSteam.SteamNetDriver]
-NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
-
-[/Script/OnlineSubsystemUtils.OnlineEngineInterfaceImpl]
-+CompatibleUniqueNetIdTypes=EOS
-+CompatibleUniqueNetIdTypes=EOSPlus
 
