--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+GameDefaultMap=/Game/Levels/Lobby.Lobby
 EditorStartupMap=/Game/Levels/Testing.Testing
 GlobalDefaultGameMode=/Game/Networking/BP_NetGameGameMode.BP_NetGameGameMode_C
 GameInstanceClass=/Script/NetGame.EOSGameInstance
@@ -98,10 +98,11 @@ SteamDevAppId=480
 [OnlineSubsystem]
 DefaultPlatformService=EOSPlus
 NativePlatformService=Steam
+PresenceAdvertises=Session
 
 [/Script/Engine.GameEngine]
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEOS.NetDriverEOS",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
-+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+;+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
 [/Script/OnlineSubsystemEOS.NetDriverEOS]
 bIsUsingP2PSockets=true
@@ -112,5 +113,4 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 [/Script/OnlineSubsystemUtils.OnlineEngineInterfaceImpl]
 +CompatibleUniqueNetIdTypes=EOS
 +CompatibleUniqueNetIdTypes=EOSPlus
-
 
