Client recognises Invite acceptance from steam overlay

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Lobby.Lobby
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Levels/Testing.Testing
 GlobalDefaultGameMode=/Game/Networking/BP_NetGameGameMode.BP_NetGameGameMode_C
 GameInstanceClass=/Script/NetGame.EOSGameInstance
