User joins Host's game session
Host still cant ServerTravel to level...

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -102,7 +102,7 @@ PresenceAdvertises=Session
 
 [/Script/Engine.GameEngine]
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEOS.NetDriverEOS",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
-;+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
 [/Script/OnlineSubsystemEOS.NetDriverEOS]
 bIsUsingP2PSockets=true
