--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-EditorStartupMap=/Game/Levels/Testing.Testing
+EditorStartupMap=/Game/Levels/PersistentLevel.PersistentLevel
 GlobalDefaultGameMode=/Game/Networking/BP_NetGameGameMode.BP_NetGameGameMode_C
-GameInstanceClass=/Script/NetGame.NWGameInstance
+GameInstanceClass=/Game/LevelPrototyping/TempNWGameInstance.TempNWGameInstance_C
 bUseSplitscreen=False
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
